:lipstick: Set the same linear gradient as the player background color for dark- and lightmode to make sure that there is always enough contrast

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -187,6 +187,9 @@
             }
         }
     }
+    .ardplayer-light-mode {
+        --ardplayer-color-ui-background-shim: var(--ardplayer-darkmode-color-ui-background-shim);
+    }
 }
 
 [data-theme='hessenschau'] {
